--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
           let box = document.getElementById('myBox');
             box.addEventListener('click', function () {
-              box.setAttribute('width', 5);
-              box.setAttribute('color', '#FFF');
+             // box.setAttribute('width', 5);
+              box.setAttribute('color', 'green');
             });
     </script>
 
