--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
 
           }
 
-          let box = document.getElementById('myBox');
+          let box = document.querySelector('a-box');
             box.addEventListener('click', function () {
-             // box.setAttribute('width', 5);
               box.setAttribute('color', 'green');
             });
     </script>
