--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             var scene = document.querySelector('a-scene');       
 
             //ADD JAVASCRIPT CODE HERE...
- let box = document.querySelector('a-box');
+ let box = document.getElementById('myBox');
             box.addEventListener('click', function () {
               box.setAttribute('color', 'green');
             });
