--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
             <!--<a-obj-model id="my3DModel" src="#3DModel-obj" position="0 0 0" rotation="0 0 0" scale=".1 .1 .1" material="opacity: 0.9; side:double; color: orange;"></a-obj-model>-->
             <!-- 3D Model example with skin -->
             <!--<a-obj-model id="my3DModel" src="#3DModel-obj" mtl="#3DModel-mtl" position="0 0 0" rotation="0 0 0" scale="1 1 1" material="opacity: 1.0; side:double;"></a-obj-model>-->
-                <a-sphere position="0 0 0" color="white" radius= "0.15">
+                <a-sphere position="0 0 0" color="green" radius= "0.25">
                     <a-animation
                         attribute = "color"
                         dur = "10000"
-                        from = "white"
-                        to = "red"
+                        from = "green"
+                        to = "blue"
                         repeat = "indefinite"></a-animation>
 
 
