--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         width="2"
                         color="white"></a-text>
             </a-plane>
-            <a-image id="display-Img" src="./assets/linkCircle.png" width="0.5" height="0.5" position="1 1.24 0">
+            <a-image src="./assets/linkCircle.png" width="0.5" height="0.5" position="1 1.24 0">
                 <a-animation attribute="opacity"
                              dur="500"
                              from="0"
