--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <body style='margin : 0px; overflow: hidden;'>
     <!-- add some info at the top of the page -->
-    <div style='position: fixed; top: 10px; width:100%; text-align: center; z-index: 1; color: white;'>
+    <div style='top: 10px; width:100%; text-align: center; z-index: 1; color: white;'>
         Instructions:<br />
         Point your camera at the target marker.
     </div>
