--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
 
     <!-- Define your 3d scene and enabled ar.js -->
-    <a-scene embedded arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
+    <a-scene embedded arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3; debugUIEnabled: false'>
             <a-marker markerhandler cursor="rayOrigin: mouse" id="marker" emitevents="true" type='hiro' value='6'>
             <a-plane src="./assets/texture.jpg" height="1" width="2" color="grey" position="0 0.5 0" rotation="-90 0 0">
                 <a-text value="\n\n Siva Sunkara  - Graduate Developer \n\n WebVR and WebAR \n\n shivajstme@gamil.com \n\n Ph: 0468357759\n\n  Australia"
